@@ -1,4 +1,7 @@
-Thu Oct 22 17:27:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Oct 22 17:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (arg_prepend): removed.  a patch from Mikhail T. in
+	  [ruby-core:26217].
 
 	* intern.h (rb_thread_join): added prototype.  a patch from
 	  Mikhail T. in [ruby-core:26217].
